--- a/src/styles/prism-theme.css
+++ b/src/styles/prism-theme.css
@@ -22,8 +22,8 @@
 
 pre[class*="language-"],
 code[class*="language-"] {
-  color: #000000;
-  font-size: 1.2rem;
+  color: #ffffff;
+  font-size: 1.1rem;
   text-shadow: none;
   font-family: "Akkurat", monospace;
   direction: ltr;
